Update example app to work and use correct express version. Closes #1.

--- a/example/login/package.json
+++ b/example/login/package.json
@@ -1,10 +1,10 @@
 {
   "name": "passport-microsoft-examples-login",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "dependencies": {
-    "express": ">= 0.0.0",
-    "ejs": ">= 0.0.0",
-    "passport": ">= 0.0.0",
-    "passport-microsoft": ">= 0.0.0"
+    "express": "^3.21.2",
+    "ejs": "^3.0.2",
+    "passport": "^0.4.1",
+    "passport-microsoft": "^0.1.0"
   }
 }
