--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "passport-microsoft",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Microsoft [Graph] authentication strategy for Passport.",
   "keywords": [
     "passport",
@@ -32,8 +32,8 @@
   ],
   "main": "./lib/",
   "dependencies": {
-    "pkginfo": "0.2.x",
-    "passport-oauth2": "1.2.0"
+    "passport-oauth2": "1.6.1",
+    "pkginfo": "0.2.x"
   },
   "engines": {
     "node": ">= 0.4.0"
