--- a/example/login/package.json
+++ b/example/login/package.json
@@ -1,10 +1,28 @@
 {
   "name": "passport-microsoft-examples-login",
   "version": "0.1.0",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/seanfisher/passport-microsoft.git"
+  },
+  "author": {
+    "name": "Sean Fisher",
+    "email": "opensource@seafish.io",
+    "url": "https://seafish.io"
+  },
   "dependencies": {
-    "express": "^3.21.2",
-    "ejs": "^3.0.2",
-    "passport": "^0.4.1",
+    "body-parser": "^1.20.0",
+    "cookie-parser": "^1.4.6",
+    "ejs": "^3.1.6",
+    "express": "^4.17.3",
+    "express-session": "^1.17.2",
+    "method-override": "^3.0.0",
+    "morgan": "^1.10.0",
+    "passport": "^0.5.2",
     "passport-microsoft": "^0.1.0"
+  },
+  "scripts": {
+    "start": "node app.js"
   }
 }
