--- a/package.json
+++ b/package.json
@@ -37,5 +37,10 @@
   },
   "engines": {
     "node": ">= 0.4.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.13.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0"
   }
 }
