--- a/package.json
+++ b/package.json
@@ -31,16 +31,23 @@
     }
   ],
   "main": "./lib/",
+  "scripts": {
+    "test": "make test"
+  },
   "dependencies": {
-    "pkginfo": "0.4.x",
-    "passport-oauth2": "1.6.1"
+    "passport-oauth2": "1.6.1",
+    "pkginfo": "0.4.x"
   },
   "engines": {
     "node": ">= 0.4.0"
   },
   "devDependencies": {
+    "chai": "^4.3.6",
+    "chai-passport-strategy": "^1.0.0",
     "eslint": "^8.13.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.26.0"
+    "eslint-plugin-import": "^2.26.0",
+    "make-node": "^0.4.6",
+    "mocha": "^9.2.2"
   }
 }
