--- a/package.json
+++ b/package.json
@@ -38,8 +38,14 @@
     "node": ">= 0.4.0"
   },
   "devDependencies": {
+    "chai": "^4.4.1",
+    "chai-passport-strategy": "^3.0.0",
     "eslint": "^8.57.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.29.1"
+    "eslint-plugin-import": "^2.29.1",
+    "mocha": "^10.3.0"
+  },
+  "scripts": {
+    "test": "mocha --require ./test/bootstrap/node.js"
   }
 }
