--- a/example/login/package.json
+++ b/example/login/package.json
@@ -20,7 +20,7 @@
     "method-override": "^3.0.0",
     "morgan": "^1.10.0",
     "passport": "^0.7.0",
-    "passport-microsoft": "^1.0.0"
+    "passport-microsoft": "*"
   },
   "scripts": {
     "start": "node app.js"
